test/compile_fail/main_not_returning_int.pine
# error: unable to unify
def main do
  "not an int"
end
